fix: styling the Navbar to make it Sticky
Styling the Navbar to make it Sticky so as to cover the Empty Top-Left Corner of the Webpage after
Scrolling

fix #319

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,8 @@ code {
 
 .navbar {
   z-index: 1000;
+  position: sticky;
+  top: 0;
 }
 
 .navbar .form-control {
